--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,16 @@
 buildscript {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.google.gms:google-services:4.3.14'
-        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.5.3")
+        classpath 'com.google.gms:google-services:4.3.13'
+        classpath("androidx.navigation:navigation-safe-args-gradle-plugin:2.5.1")
     }
 }
 plugins {
-    id 'androidx.navigation.safeargs' version '2.4.2' apply false
-    id 'com.android.application' version '7.4.2' apply false
-    id 'com.android.library' version '7.4.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
+    id 'androidx.navigation.safeargs' version '2.5.1' apply false
+    id 'com.android.application' version '7.2.2' apply false
+    id 'com.android.library' version '7.2.2' apply false
+    id 'org.jetbrains.kotlin.android' version '1.7.0' apply false
 }
